# -PhoneBook

./: .gitignore  CMakeLists.txt  README.md
back-end/: .clang-format  CMakeLists.txt
back-end/restserver/: CMakeLists.txt
back-end/restserver/src/: AuthBundle.h  AuthManager.cpp  AuthManager.h  Contact.h  ContactList.cpp  ContactList.h  Phonebook.cpp  Phonebook.h  RestServer.cpp  RestServer.h
back-end/restserver/tests/: CMakeLists.txt  catch.hpp  ut_Phonebook.cpp
back-end/restserver/tools/cmake/: tests.cmake
back-end/src/: Contact.h  Controller.cpp  Controller.h  RestServer.cpp  RestServer.h  main.cpp
back-end/src/authentication/: AccountDb.cpp  AccountDb.h  AccountManager.cpp  AccountManager.h  Cypher.cpp  Cypher.h
back-end/src/contact/: ContactDb.cpp  ContactDb.h
back-end/src/include/: AuthToken.h
back-end/tests/: CMakeLists.txt  catch.hpp  ut_Controller.cpp
back-end/tools/cmake/: tests.cmake
docs/interface/request/: create-contact.json  delete-contact.json  read-contact.json  sign-in.json  sign-up.json  suspend.json  update-contact.json
docs/interface/response/: all-contacts.json  response-type.enum
docs/mockups/: Phone Book.bmpr
docs/sequence-diagram/: PhoneBook.puml
front-end/: angular.json  package-lock.json  package.json
front-end/src/: styles.css
front-end/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.module.ts
front-end/src/app/home-page/: home-page.component.css  home-page.component.html  home-page.component.spec.ts
front-end/src/app/phone-book-page/: phone-book-page.component.css  phone-book-page.component.html  phone-book-page.component.spec.ts  phone-book-page.component.ts
front-end/src/app/settings-page/: settings-page.component.css  settings-page.component.html
front-end/src/app/top-nav/: top-nav.component.html  top-nav.component.ts
src/front-end/: .gitignore  angular.json
src/front-end/src/app/home-page/: home-page.component.ts
